force-app/main/default/objects/Account_To_Advice__c/Account_To_Advice__c.object-meta.xml
<CustomObject>
    <label>Account To Advice</label>
    <nameField>
        <displayFormat>ATA-{00000}</displayFormat>
        <label>Account To Advice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account To Advice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>