force-app/main/default/objects/Account_To_Advice__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Advice Participants</relationshipLabel>
    <relationshipName>Account_To_Advice</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>