force-app/main/default/objects/Account_To_Advice__c/fields/Date_DB_triage_doc_confirmed_by_client__c.field-meta.xml
<CustomField>
    <fullName>Date_DB_triage_doc_confirmed_by_client__c</fullName>
    <formula>Account__r.Date_Client_Confirmed_Understanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date DB triage doc confirmed by client</label>
    <type>Date</type>
</CustomField>