force-app/main/default/objects/Account_To_Advice__c/fields/Date_terms_of_business_last_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_terms_of_business_last_accepted__c</fullName>
    <formula>Account__r.Date_terms_of_business_last_accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date terms of business last accepted</label>
    <type>Date</type>
</CustomField>