force-app/main/default/objects/Account_To_Advice__c/fields/DT_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>DT_Risk_Score__c</fullName>
    <formula>TEXT(Account__r.DT_Risk_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT Risk Score</label>
    <type>Text</type>
</CustomField>