force-app/main/default/objects/Account_To_Advice__c/fields/Person_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Name</label>
    <type>Text</type>
</CustomField>